--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 ##base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/proyectodamdefinitivo
-##spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:46977/railway
+##spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:52008/railway
 spring.datasource.username=root
-##spring.datasource.password=eWUYTONIixIyMiMruNLgYWrPcYMMQLpG
+##spring.datasource.password=PEdwZlFiXPrbLiINuaiiYaAJnpzOJWBp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ##evitar que se cree el esquema nuevamente
 ##spring.jpa.hibernate.ddl-auto=update
